@@ -16,10 +16,12 @@ Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
 #include <gtk/gtk.h>
 #include "stock.h"
-#include "stock_menu_about.xpm"
 
-#define NUM_NEW_STOCK_ITEMS 7
-#define NUM_REMAPPED_STOCK_ITEMS 6
+#if USE_OWN_ABOUT_STOCK
+#include "stock_menu_about.png_c"
+#endif
+
+#define NUM_NEW_STOCK_ITEMS (6 + USE_OWN_ABOUT_STOCK)
 
 GtkStockItem stock_items[NUM_NEW_STOCK_ITEMS] = {
 	{ GTK_STOCK_BUTTON,   "Button",     0, 0, "gtk20" },
@@ -28,10 +30,13 @@ GtkStockItem stock_items[NUM_NEW_STOCK_ITEMS] = {
 	{ GTK_STOCK_TOGGLE3,  "Toggle",     0, 0, "gtk20" },
 	{ GTK_STOCK_DISABLED, "Disabled",   0, 0, "gtk20" },
 	{ GTK_STOCK_IMAGE,    "With image", 0, 0, "gtk20" },
+#if USE_OWN_ABOUT_STOCK
 	{ GTK_STOCK_ABOUT,    "About",      0, 0, "gtk20" },
+#endif
 };
 
-struct { gchar *old_id, *new_id; } stock_map[NUM_NEW_STOCK_ITEMS] = {
+#define NUM_REMAPPED_STOCK_ITEMS 6
+struct { gchar *old_id, *new_id; } stock_map[NUM_REMAPPED_STOCK_ITEMS] = {
 	{ GTK_STOCK_BUTTON,   GTK_STOCK_EXECUTE   },
 	{ GTK_STOCK_TOGGLE1,  GTK_STOCK_BOLD      },
 	{ GTK_STOCK_TOGGLE2,  GTK_STOCK_ITALIC    },
@@ -52,9 +57,11 @@ void init_new_stock_items(void)
 			gtk_icon_factory_lookup_default(stock_map[i].new_id));
 	}
 
+#if USE_OWN_ABOUT_STOCK
 	gtk_icon_factory_add(icon_factory, GTK_STOCK_ABOUT,
-		gtk_icon_set_new_from_pixbuf(gdk_pixbuf_new_from_xpm_data
-			((const char**)stock_menu_about)));
+		gtk_icon_set_new_from_pixbuf(gdk_pixbuf_new_from_inline
+			(-1, stock_menu_about, FALSE, NULL)));
+#endif
 
 	gtk_stock_add_static(stock_items, NUM_NEW_STOCK_ITEMS);
 	gtk_icon_factory_add_default(icon_factory);
