@@ -1,49 +1,0 @@
-/* XPM */
-static char *stock_menu_about[] = {
-/* columns rows colors chars-per-pixel */
-"16 16 27 1",
-"  c black",
-". c #050501",
-"X c #101104",
-"o c #151606",
-"O c #161705",
-"+ c #181806",
-"@ c #1C1D07",
-"# c #1E1F08",
-"$ c #1F1F08",
-"% c #212208",
-"& c #4A4C13",
-"* c #4C4E13",
-"= c #64671A",
-"- c #ABB02D",
-"; c #B4BA2F",
-": c #CBD235",
-"> c #CDD435",
-", c #CED636",
-"< c #E5EC3C",
-"1 c #E8F03D",
-"2 c #E9F03D",
-"3 c #EAF13D",
-"4 c #ECF33E",
-"5 c #EEF63E",
-"6 c #EFF73F",
-"7 c #F0F83F",
-"8 c None",
-/* pixels */
-"8888888888888888",
-"8888888888888888",
-"8888888888888888",
-"8888888888888888",
-"8888888* o888888",
-"888888  5 888888",
-"888X=  37:  &888",
-"8888 7777773 888",
-"8888$ 7777< .888",
-"88888 3577- 8888",
-"88888 75 5, 8888",
-"88888 ; + , 8888",
-"88888$ 888 o8888",
-"8888888888888888",
-"8888888888888888",
-"8888888888888888"
-};
